--- a/package.json
+++ b/package.json
@@ -1,32 +1,31 @@
 {
-	"name": "cache-express",
-	"version": "1.0.2",
-	"description": "Express Cache Middleware: Effortlessly cache responses with custom timeouts, dependencies, and enhanced performance",
-	"license": "MIT",
-	"repository": "https://github.com/ahgsql/cache-express",
-	"author": {
-		"name": "Ali Haydar GÜLEÇ",
-		"email": "alihaydargulec@gmail.com"
-	},
-	"exports": "./index.js",
-	"engines": {
-		"node": ">=16"
-	},
-	"scripts": {
-		"test": "ava"
-	},
-	"files": [
-		"index.js"
-	],
-	"keywords": [
-		"express",
-		"cache",
-		"memory-cache",
-		"efficiency",
-		"dependency based cache"
-	],
-	"devDependencies": {
-		"ava": "^5.3.0",
-		"npm-prepare-dist": "^0.4.1"
-	}
+  "name": "cache-coffee-express",
+  "version": "1.0.0",
+  "description": "This is a fork of \"cache-express\", with minor and specific changes to avoid caching in services that return code other than 2xx and others.",
+  "license": "MIT",
+  "repository": "https://github.com/ElJijuna/cache-express",
+  "author": {
+    "name": "El Jijuna",
+    "email": "pilmee@gmail.com"
+  },
+  "exports": "./index.js",
+  "engines": {
+    "node": ">=22"
+  },
+  "scripts": {
+    "test": "ava"
+  },
+  "files": [
+    "index.js"
+  ],
+  "keywords": [
+    "express",
+    "cache",
+    "memory-cache",
+    "efficiency",
+    "dependency based cache"
+  ],
+  "devDependencies": {
+    "npm-prepare-dist": "^0.4.1"
+  }
 }
